--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -61,11 +61,17 @@
             </li>
             <li class="nav-item dropdown">
                 <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                    <a href="#">Action</a>
-                    <a href="#">Another action</a>
-                    <a href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li>
+                        <a href="#">Something else here</a>
+                        <ul>
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
         </ul>
         <form class="form-inline my-1 my-md-0">
