--- a/site/4.0/examples/grid/index.html
+++ b/site/4.0/examples/grid/index.html
@@ -201,7 +201,7 @@ h2 {
         </div>
         <div class="col-4 col-sm-3">.col-4 .col-sm-3</div>
 
-        <!-- Add the extra clearfix for only the required viewport -->
+        <!-- Force next columns to break to a new line for only the required viewport -->
         <div class="w-100 d-sm-none"></div>
 
         <div class="col-4 col-sm-3">.col-4 .col-sm-3</div>
