--- a/test/visual/grid.html
+++ b/test/visual/grid.html
@@ -169,8 +169,8 @@
         </div>
         <div class="col-4 col-sm-3">.col-4 .col-sm-3</div>
 
-        <!-- Add the extra clearfix for only the required viewport -->
-        <div class="clearfix d-sm-none"></div>
+        <!-- Force next columns to break to a new line for only the required viewport -->
+        <div class="w-100 d-sm-none"></div>
 
         <div class="col-4 col-sm-3">.col-4 .col-sm-3</div>
         <div class="col-8 col-sm-3">.col-8 .col-sm-3</div>
