Fix contrast issue

--- a/test/visual/grid.html
+++ b/test/visual/grid.html
@@ -104,7 +104,7 @@
     </div>
 
     <h2>Full width, single column</h2>
-    <p class="text-warning">No grid classes are necessary for full-width elements.</p>
+    <p class="text-info">No grid classes are necessary for full-width elements.</p>
 
     <hr />
 
