Add responsive gutters to grid layout

--- a/site/4.0/examples/grid/index.html
+++ b/site/4.0/examples/grid/index.html
@@ -40,8 +40,8 @@ h2 {
 .example-container {
     padding-top: .75rem;
     padding-bottom: .75rem;
-    background-color: rgba(34,68,102,.15);
-    border: 1px solid rgba(34,68,102,.2);
+    background-color: rgba(22,128,164,.15);
+    border: 1px solid rgba(22,128,164,.2);
 }
 </style>
 </head>
@@ -114,6 +114,14 @@ h2 {
         <div class="col-md-4">.col-md-4</div>
         <div class="col-md-4">.col-md-4</div>
         <div class="col-md-4">.col-md-4</div>
+    </div>
+
+    <h2>Three equal columns alternative</h2>
+    <p>By using the <code>.row-cols-*</code> classes, you can easily create a grid with equal columns.</p>
+    <div class="row row-cols-md-3">
+        <div class="col"><code>.col</code> child of <code>.row-cols-md-3</code></div>
+        <div class="col"><code>.col</code> child of <code>.row-cols-md-3</code></div>
+        <div class="col"><code>.col</code> child of <code>.row-cols-md-3</code></div>
     </div>
 
     <h2>Three unequal columns</h2>
@@ -384,15 +392,46 @@ h2 {
 
     <h2>No Gutters</h2>
 
-    <div class="row no-gutters">
+    <div class="row g0">
         <div class="col-4">.col-4</div>
         <div class="col-4">.col-4</div>
         <div class="col-4">.col-4</div>
     </div>
 
+    <h2>Responsive Gutters</h2>
+    <p>With <code>.gx-*</code> classes, the horizontal gutters can be adjusted.</p>
+    <div class="row row-cols-1 row-cols-md-3 gx-2">
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gx-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gx-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gx-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gx-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gx-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gx-2</code> gutters</div>
+    </div>
+
+    <p class="mt-4">Use the <code>.gy-*</code> classes to control the vertical gutters.</p>
+    <div class="row row-cols-1 row-cols-md-3 gy-2">
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gy-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gy-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gy-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gy-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gy-2</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.gy-2</code> gutters</div>
+    </div>
+
+    <p class="mt-4">With <code>.g-*</code> classes, the gutters in both directions can be adjusted.</p>
+    <div class="row row-cols-1 row-cols-md-3 g-1">
+        <div class="col themed-grid-col"><code>.col</code> with <code>.g-1</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.g-1</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.g-1</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.g-1</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.g-1</code> gutters</div>
+        <div class="col themed-grid-col"><code>.col</code> with <code>.g-1</code> gutters</div>
+    </div>
+
 </div> <!-- /container -->
 
-<h2>Responsive Gutters with Spacing Utilities</h2>
+<h2>Custom Gutters with Spacing Utilities</h2>
 
 <div class="container">
     <div class="row mx-lg-n2">
