Content-Forms: Simplify `.form-file` to use `display: block`

--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -466,7 +466,7 @@
         </select>
     </div>
     <div class="col">
-        <input type="date" class="form-control" aria-label="Name" value="Some Time" />
+        <input type="date" class="form-control" aria-label="Name" />
     </div>
 </div>
 
@@ -547,5 +547,35 @@
   }, false);
 })();
 </script>
+
+
+<div class="container py-2">
+  <div class="row">
+    <div class="col-auto">
+      <label for="row-input0" class="form-label">Label of some length</label>
+      <input id="row-input0" type="text" class="form-control">
+    </div>
+    <div class="col-auto">
+      <label for="row-input1" class="form-label">Label of some length</label>
+      <select id="row-input1" class="form-control">
+        <option selected="">Open this select menu</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+    <div class="col-auto">
+      <label for="row-input2" class="form-label">Label of some length</label>
+      <div class="form-file">
+        <input id="row-input2" type="file" class="form-file-input">
+        <label for="row-input2" class="form-file-label">
+          <span class="form-file-text">Choose file...</span>
+          <span class="form-file-button">Browse</span>
+        </label>
+       </div>
+  </div>
+</div>
+
+
 </body>
 </html>
