Content-Reboot: Adjust the `legend  block style layout

--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -549,8 +549,8 @@
 </script>
 
 
-<div class="container py-2">
-  <div class="row">
+<div class="container">
+  <div class="row mb-1">
     <div class="col-auto">
       <label for="row-input0" class="form-label">Label of some length</label>
       <input id="row-input0" type="text" class="form-control">
@@ -573,9 +573,20 @@
           <span class="form-file-button">Browse</span>
         </label>
        </div>
+    </div>
+  </div>
+
+  <div class="mb-1">
+    <fieldset class="border">
+      <legend class="bg-light py-0_5 px-1 mb-0 border-bottom">
+      Title
+      </legend>
+      <div class="p-1">
+        Nullam id dolor id nibh ultricies vehicula ut id elit. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec sed odio dui. Nulla vitae elit libero, a pharetra augue.
+      </div>
+    </fieldset>
   </div>
 </div>
-
 
 </body>
 </html>
