Content-Forms: Add sizing for `.form-file`, and within sized `.input-group`s, additional color var for `.form-check-label`

--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -586,7 +586,47 @@
       </div>
     </fieldset>
   </div>
+
+
+    <div class="form-file form-file-xsmall mb-1">
+      <input type="file" class="form-file-input" id="formFileSize0">
+      <label class="form-file-label" for="formFileSize0">
+        <span class="form-file-text">Extra small choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
+    </div>
+    <div class="form-file form-file-small mb-1">
+      <input type="file" class="form-file-input" id="formFileSize1">
+      <label class="form-file-label" for="formFileSize1">
+        <span class="form-file-text">Small choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
+    </div>
+    <div class="form-file mb-1">
+      <input type="file" class="form-file-input" id="formFileSize2">
+      <label class="form-file-label" for="formFileSize2">
+        <span class="form-file-text">Default choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
+    </div>
+    <div class="form-file form-file-large mb-1">
+      <input type="file" class="form-file-input" id="formFileSize3">
+      <label class="form-file-label" for="formFileSize3">
+        <span class="form-file-text">Large choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
+    </div>
+    <div class="form-file form-file-xlarge">
+      <input type="file" class="form-file-input" id="formFileSize4">
+      <label class="form-file-label" for="formFileSize4">
+        <span class="form-file-text">Extra large choose file...</span>
+        <span class="form-file-button">Browse</span>
+      </label>
+    </div>
+
 </div>
+
+
 
 </body>
 </html>
