--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -342,6 +342,59 @@
     <button class="btn" type="button">Go!</button>
 </div>
 
+<h2>Input group size w/ file input</h2>
+<div class="input-group input-group-xsmall mb-1">
+  <button class="btn btn-outline-primary" type="button">Button</button>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="formFileSize0">
+    <label class="form-file-label" for="formFileSize0">
+      <span class="form-file-text">Extra small choose file...</span>
+      <span class="form-file-button">Browse</span>
+    </label>
+  </div>
+</div>
+<div class="input-group input-group-small mb-1">
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="formFileSize1">
+    <label class="form-file-label" for="formFileSize1">
+      <span class="form-file-text">Small choose file...</span>
+      <span class="form-file-button">Browse</span>
+    </label>
+  </div>
+  <button class="btn btn-outline-primary" type="button">Button</button>
+</div>
+<div class="input-group mb-1">
+  <button class="btn btn-outline-primary" type="button">Button</button>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="formFileSize2">
+    <label class="form-file-label" for="formFileSize2">
+      <span class="form-file-text">Default choose file...</span>
+      <span class="form-file-button">Browse</span>
+    </label>
+  </div>
+</div>
+<div class="input-group input-group-large mb-1">
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="formFileSize3">
+    <label class="form-file-label" for="formFileSize3">
+      <span class="form-file-text">Large choose file...</span>
+      <span class="form-file-button">Browse</span>
+    </label>
+  </div>
+  <button class="btn btn-outline-primary" type="button">Button</button>
+</div>
+<div class="input-group input-group-xlarge mb-1">
+  <button class="btn btn-outline-primary" type="button">Button</button>
+  <div class="form-file">
+    <input type="file" class="form-file-input" id="formFileSize4">
+    <label class="form-file-label" for="formFileSize4">
+      <span class="form-file-text">Extra large choose file...</span>
+      <span class="form-file-button">Browse</span>
+    </label>
+  </div>
+</div>
+
+
 <h2>Margin Check</h2>
 
 <form class="mb-1">
