Update some dropdown and progress examples and tests

--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -100,11 +100,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                    <a href="#">Action</a>
-                    <a href="#">Another action</a>
-                    <a href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                </ul>
             </li>
         </ul>
         <form class="form-inline my-1 my-md-0">
@@ -135,11 +135,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                    <a href="#">Action</a>
-                    <a href="#">Another action</a>
-                    <a href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                </ul>
             </li>
         </ul>
         <form class="form-inline ms-auto">
@@ -168,11 +168,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                    <a href="#">Action</a>
-                    <a href="#">Another action</a>
-                    <a href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                </ul>
             </li>
         </ul>
         <form class="form-inline ms-auto">
@@ -201,11 +201,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                    <a href="#">Action</a>
-                    <a href="#">Another action</a>
-                    <a href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                </ul>
             </li>
         </ul>
         <form class="form-inline ms-auto">
@@ -234,11 +234,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                    <a href="#">Action</a>
-                    <a href="#">Another action</a>
-                    <a href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                </ul>
             </li>
         </ul>
         <form class="form-inline ms-auto">
@@ -308,11 +308,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                    <a href="#">Action</a>
-                    <a href="#">Another action</a>
-                    <a href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                </ul>
             </li>
         </ul>
         <form class="form-inline">
@@ -344,11 +344,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
             <form class="form-inline ms-auto">
@@ -379,11 +379,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
             <form class="form-inline ms-auto">
@@ -415,11 +415,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                <div class="dropdown-menu">
-                    <a href="#">Action</a>
-                    <a href="#">Another action</a>
-                    <a href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                </ul>
             </li>
         </ul>
     </div>
@@ -445,11 +445,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -478,11 +478,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
             <form class="form-inline ms-auto">
@@ -511,11 +511,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
