--- a/site/4.0/examples/navbars/index.html
+++ b/site/4.0/examples/navbars/index.html
@@ -336,11 +336,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
             <form class="form-inline ms-auto">
@@ -402,11 +402,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -435,11 +435,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
             <form class="form-inline ms-auto">
@@ -468,11 +468,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Action</a>
-                        <a href="#">Another action</a>
-                        <a href="#">Something else here</a>
-                    </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
