--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -273,7 +273,7 @@
     </div>
     <div class="form-group">
         <div class="form-file">
-            <input type="file" class="form-file-input is-invalid" id="validatedCustomFile" required>
+            <input type="file" class="form-file-input" id="validatedCustomFile" required>
             <label class="form-file-label" for="validatedCustomFile">
                 <span class="form-file-text">Choose file...</span>
                 <span class="form-file-button">Browse</span>
